fix various pagination errors

--- a/src/main/resources/css/labels.css
+++ b/src/main/resources/css/labels.css
@@ -2,6 +2,10 @@
     margin-bottom: 5px;
 }
 
+.rq-labels-table-header {
+    min-width: 200px;
+}
+
 .rq-labels-side-panel {
     margin-bottom: 30px;
 }
